--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -1,3 +1,13 @@
-h1{
-	color: blue;
+body{
+	background-color: #C1E3F2;
+}
+
+.fixed-nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 50px;
+  background-color: #000000;
 }
