--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -2,7 +2,7 @@ body{
 	background-color: #C1E3F2;
 }
 
-.fixed-nav-bar {
+.nav-bar {
   position: fixed;
   top: 0;
   left: 0;
@@ -10,4 +10,5 @@ body{
   width: 100%;
   height: 50px;
   background-color: #000000;
+  color: #FFFFFF;
 }
