--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -3,13 +3,14 @@ body{
 }
 
 .nav-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  width: 100%;
-  height: 50px;
-  background-color: #000000;
-  color: #FFFFFF;
-  font-size: 2em;
+	position: fixed;
+	top: 0;
+  	left: 0;
+  	z-index: 9999;
+  	width: 100%;
+ 	height: 50px;
+  	background-color: #000000;
+  	color: #FFFFFF;
+  	font-size: 2em;
+  	text-decoration: none;
 }
