--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -10,7 +10,10 @@ body{
   	width: 100%;
  	height: 50px;
   	background-color: #000000;
-  	color: #FFFFFF;
-  	font-size: 2em;
-  	text-decoration: none;
+}
+
+.nav-bar > a{
+	text-decoration: none;
+	color: #FFFFFF;
+	font-size: 2em;
 }
