--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -16,7 +16,10 @@ h1 {
   	background-color: #000000;
 }
 
-.nav-bar > a{
+.nav-bar ul{
+	display: inline;
+}
+.nav-bar ul > a{
 	text-decoration: none;
 	color: #FFFFFF;
 	font-size: 2em;
