--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -15,15 +15,12 @@ h1 {
  	height: 50px;
   	background-color: #000000;
 }
-
-nav ul li{
-	display: inline;
+.nav-bar ul{
+	list-style-type: none;
+}
+.nav-bar ul li > a{
+	display: block;
 	text-decoration: none;
 	color: #FFFFFF;
 	font-size: 2em;
 }
-/*nav ul li > a{
-	text-decoration: none;
-	color: #FFFFFF;
-	font-size: 2em;
-}*/
