--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -17,8 +17,12 @@ h1 {
 }
 .nav-bar ul{
 	list-style-type: none;
+}
+
+.nav-bar ul li{
 	display: inline;
 }
+
 .nav-bar ul li > a{
 	display: block;
 	text-decoration: none;
