--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -6,7 +6,7 @@ h1 {
 	margin: 60px;
 }
 
-.nav-bar {
+/*.nav-bar {
 	position: fixed;
 	top: 0;
   	left: 0;
@@ -28,4 +28,29 @@ h1 {
 	text-decoration: none;
 	color: #FFFFFF;
 	font-size: 2em;
+}
+*/
+.nav-bar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.nav-bar li {
+    float: left;
+}
+
+.nav-bar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+.nav-bar li a:hover {
+    background-color: #111;
 }
