--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -30,7 +30,7 @@ h1 {
 	font-size: 2em;
 }
 */
-.nav-bar ul {
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -38,11 +38,11 @@ h1 {
     background-color: #333;
 }
 
-.nav-bar li {
+li {
     float: left;
 }
 
-.nav-bar li a {
+li a {
     display: block;
     color: white;
     text-align: center;
@@ -51,6 +51,6 @@ h1 {
 }
 
 /* Change the link color to #111 (black) on hover */
-.nav-bar li a:hover {
+li a:hover {
     background-color: #111;
 }
