--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -10,8 +10,8 @@ h1 {
 ul {
 	position: fixed;
     	list-style-type: none;
-    	margin: 0;
-    	padding: 0;
+    	top: 0;
+	width: 100%;
     	overflow: hidden;
     	background-color: #333;
 }
