--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -8,27 +8,32 @@ h1 {
 
 /* from http://www.w3schools.com/css/css_navbar.asp */
 ul {
-	position: fixed;
-    	list-style-type: none;
-    	top: 0;
-	width: 100%;
-    	overflow: hidden;
-    	background-color: #333;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 li {
-    	float: left;
+    float: left;
 }
 
 li a {
-    	display: block;
-    	color: white;
-    	text-align: center;
-    	padding: 14px 16px;
-    	text-decoration: none;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-    	background-color: #111;
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
 }
