--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -1,7 +1,10 @@
 body{
 	background-color: #C1E3F2;
 }
-
+div {
+	padding: 20px;
+	margin-top: 40px;
+}
 /* from http://www.w3schools.com/css/css_navbar.asp */
 ul {
     list-style-type: none;
