--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -36,18 +36,18 @@ div > p{
 	margin: 15px;
 }
 @media only screen and (min-width: 320px){
-	img {
-		width: 75%;
+	div img {
+		width: 35%;
 		height: auto;
 	}
 @media only screen and (min-width: 768px){
-	img{
+	div img{
 		width: 40%;
 		height: auto;
 	}
 	
 @media only screen and (min-width:1200px){
-	img {
+	div img {
 		width: 50%;
 		height: auto;
 	}
