--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -29,8 +29,8 @@ li a {
 div {
 	padding: 20px;
 	margin-top: 40px;
-	width: 75%;
-	height: 1500px;
+	width: 100;
+	height: auto;
 }
 div > p{
 	margin: 15px;
@@ -47,6 +47,10 @@ div > p{
 	}
 	
 @media only screen and (min-width:1200px){
+	div {
+		width: 75%;
+		height: auto;
+	}
 	div img {
 		width: 50%;
 		height: auto;
