--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -1,3 +1,56 @@
-h1{
-	color: blue;
+body{
+	background-color: #C1E3F2;
 }
+
+/* from http://www.w3schools.com/css/css_navbar.asp */
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+div {
+	margin-top: 60px;
+	width: 100%;
+	height: auto;
+}
+div > p{
+	margin: 15px;
+}
+@media only screen and (min-width: 320px){
+	div img {
+		width: 75%;
+		height: auto;
+	}
+@media only screen and (min-width: 768px){
+	div img{
+		width: 80%;
+		height: auto;
+	}
+	
+@media only screen and (min-width:1200px){
+	div {
+		width: 60%;
+		height: auto;
+	}
+	div img {
+		width:90%;
+		height: auto;
+	}
