--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -28,18 +28,24 @@ li a {
 
 div {
 	margin-top: 60px;
-	width: 100%;
+	width: 50%;
 	height: auto;
 }
 div > p{
 	margin: 15px;
 }
 @media only screen and (min-width: 320px){
+	div {
+		width: 100%;
+	}
 	div img {
 		width: 50%;
 		height: auto;
 	}
 @media only screen and (min-width: 768px){
+	div {
+		width: 100%;
+	}
 	div img{
 		width: 40%;
 		height: auto;
