--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -35,11 +35,17 @@ div > p{
 	margin: 15px;
 }
 @media only screen and (min-width: 320px){
+	div {
+		width: 100%;
+	}
 	div img {
 		width: 100%;
 		height: auto;
 	}
 @media only screen and (min-width: 768px){
+	div {
+		width: 100%;
+	}
 	div img{
 		width: 90%;
 		height: auto;
