--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -2,7 +2,7 @@ body{
 	background-color: #C1E3F2;
 }
 
-/* from http://www.w3schools.com/css/css_navbar.asp */
+/* nav bar css from http://www.w3schools.com/css/css_navbar.asp */
 ul {
     list-style-type: none;
     margin: 0;
