--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -32,7 +32,10 @@ div {
 	height: auto;
 }
 div > p{
-	margin: 15px;
+	margin: 30px;
+}
+div > h3{
+	margin: 30px;
 }
 @media only screen and (min-width: 320px){
 	div {
