--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -33,9 +33,11 @@ div {
 }
 div > p{
 	margin: 30px;
+	text-align: center;
 }
 div > h3{
 	margin: 30px;
+	text-align: center;
 }
 @media only screen and (min-width: 320px){
 	div {
