--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -55,15 +55,18 @@ div > img{
 	div img{
 		width: 40%;
 		height: auto;
+		padding: 30px;
 	}
 	
 @media only screen and (min-width:1200px){
 	div {
 		width: 60%;
 		height: auto;
+		padding: 30px;
 	}
 	div img {
 		width: 50%;
 		height: auto;
+		padding: 30px;
 	}
 	
